# KnockBank

./: .gitignore  README.md  docker-compose.yml
server/: .dockerignore  .env  .env.exemple  Dockerfile  Makefile  pyproject.toml
server/app/: __init__.py  config.py  database.py
server/app/controllers/: __init__.py  account_controller.py  auth_controller.py  conta_controller.py  transaction_controller.py
server/app/errors/: __init__.py  domain_error.py  forbidden_error.py  infra_error.py  not_found_error.py  unauthorized_error.py
server/app/models/: __init__.py  account.py  conta.py  person.py  pessoa.py  transaction.py  transactions.py  user.py
server/app/repositories/: __init__.py  account_repository.py  conta_repository.py  pessoa_repository.py  transaction_repository.py  user_repository.py
server/app/schemas/: __init__.py  account.py  conta.py  pagination.py  person.py  transaction.py  user.py
server/app/security/: __init__.py  auth.py  jwt.py
server/app/services/: __init__.py  account_service.py  auth_service.py  conta_service.py  transaction_service.py
server/app/utils/: builders.py
server/knockbankapi/: __init__.py
server/knockbankapi/app/: __init__.py  auth.py
server/knockbankapi/infra/: __init__.py  config.py  db.py
server/migrations/versions/: 0d505c6bfada_adicionando_entidades_pessoa_e_conta.py  11ba600c4d43_renaming_transction_reciver_id_origin_.py  796cbec9b5ac_check_constraint_added.py  7acab769692b_users_foreing_updated.py  b86f5218f5f4_cpf_unico_obrigatorio.py  bf1f7ce4cf31_entidade_do_usuario_para_realização_do_.py  ce25e53603f8_rename_transaction_value_to_money.py  d8e65d29c60b_origin_account_can_be_null.py  (+1 more)
server/tests/: conftest.py  test_app.py
(+174 files in other folders)
