[tool.poetry]
name = "knockbankapi"
version = "1.0.3"
description = "Knock Bank API"
authors = ["Davi Lucciola <davilucciola14@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
apiflask = "^2.0.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
mysql-connector-python = "^8.2.0"
python-jose = "^3.3.0"
cpf-cnpj-validate = "^1.4"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flask-pytest = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
